1.1.0-next:

1.1.0:
 * dvbtuk: support long titles split into the description

1.0.0:
 * initial release