@@ -32,10 +32,11 @@ retreat of the ice. [S,AD]\
 ''')
 
     def test_start (self):
-        self.assertEqual(self.results[0].start, time.gmtime(1565445600))
+        self.assertEqual(self.results[0].start, time.gmtime(1565456400))
 
     def test_stop (self):
-        self.assertEqual(self.results[0].stop, time.gmtime(1565449200))
+        print(time.mktime(self.results[0].stop))
+        self.assertEqual(self.results[0].stop, time.gmtime(1565460000))
 
     def test_channel (self):
         self.assertEqual(self.results[0].channel,
@@ -44,8 +45,8 @@ retreat of the ice. [S,AD]\
     def test_summary (self):
         self.assertEqual(self.results[0].summary, '''\
 Ice Worlds: David Attenborough's awe-inspiring natural history series visits \
-the frozen worlds of the Arctic and Antarctic. See polar bears negotiate the \
-retreat of the ice. [S,AD]\
+the frozen worlds of the Arctic and Antarctic. With a different summary in \
+this particular broadcast...\
 ''')
 
     def test_widescreen (self):
@@ -81,9 +82,22 @@ retreat of the ice. [S,AD]\
 ''')
 
 
-class NewTitle (TestCase):
+class NewTitleWithColon (TestCase):
     def setUp (self):
-        path = get_resource_path('single-result-new-title.epgdb')
+        path = get_resource_path('single-result-new-title-colon.epgdb')
+        with open(path, 'rb') as f:
+            self.results = list(dvbtuk.parse(pyepgdb.parse(f)))
+
+    def test_count (self):
+        self.assertEqual(len(self.results), 1, 'should be 1 result')
+
+    def test_title (self):
+        self.assertEqual(self.results[0].title, 'Planet Earth')
+
+
+class NewTitleWithDot (TestCase):
+    def setUp (self):
+        path = get_resource_path('single-result-new-title-dot.epgdb')
         with open(path, 'rb') as f:
             self.results = list(dvbtuk.parse(pyepgdb.parse(f)))
 
